--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+  "preinstall": "chmod +x node_modules/.bin/vite",
     "dev": "vite --host",
-    "build": "vite build",
+  "build": "NODE_ENV=production vite build",
     "preview": "vite preview --host 0.0.0.0 --port $PORT",
     "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
