🔧 FIX: SettingsModal use /assistant/bots instead of /assistant/user-bots

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "preinstall": "chmod +x node_modules/.bin/vite",
     "dev": "vite --host",
-  "build": "NODE_ENV=production vite build",
-    "preview": "vite preview --host 0.0.0.0 --port $PORT",
-    "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+    "build": "NODE_ENV=production vite build",
+    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+    "serve": "npx vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
     "proxy": "node proxy-server.js",
     "lint": "eslint .",
