--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "NODE_ENV=production vite build",
-"build:static": "vite build"
+"build:static": "vite build",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "serve": "npx vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
