--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "node node_modules/vite/bin/vite.js build",
+"build:static": "vite build",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
