--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "node node_modules/vite/bin/vite.js build",
-"build:static": "vite build",
+        "build": "node node_modules/vite/bin/vite.js build",
+    "build:static": "node node_modules/vite/bin/vite.js build"
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
