--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-        "build": "node node_modules/vite/bin/vite.js build",
+    "build": "node node_modules/vite/bin/vite.js build",
     "build:static": "node node_modules/vite/bin/vite.js build",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
-    "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+"serve": "node node_modules/serve/bin/serve.js dist -s -p ${PORT:-4173}",
     "start": "npm run serve",
     "proxy": "node proxy-server.js",
     "lint": "eslint .",
