--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "node node_modules/vite/bin/vite.js build",
-    "build:static": "node node_modules/vite/bin/vite.js build",
-    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
-"serve": "node node_modules/serve/bin/serve.js dist -s -p ${PORT:-4173}",
-    "start": "npm run serve",
-    "proxy": "node proxy-server.js",
-    "lint": "eslint .",
-    "deploy:railway": "npm run build && railway up"
+"scripts": {
+  "dev": "vite --host",
+  "build": "node node_modules/vite/bin/vite.js build",
+  "build:static": "node node_modules/vite/bin/vite.js build",
+  "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+  "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+  "start": "npm run serve",
+  "proxy": "node proxy-server.js",
+  "lint": "eslint .",
+  "deploy:railway": "npm run build && railway up"
   },
   "engines": {
     "node": ">=18.0.0",
