--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 "scripts": {
   "dev": "vite --host",
   "prebuild:static": "echo 'VITE_BACKEND_URL=$VITE_BACKEND_URL' > .env",
-  "build:static": "node node_modules/vite/bin/vite.js build",
+"build:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production && node node_modules/vite/bin/vite.js build"
   "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
   "serve": "node node_modules/vite/bin/vite.js preview --host 0.0.0.0 --port ${PORT:-4173}",
   "start": "npm run serve",
