--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
 "scripts": {
   "dev": "vite --host",
-  "  "prebuild:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production",
-"build:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production && node node_modules/vite/bin/vite.js build",
-"preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+  "prebuild:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production",
+  "build:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production && node node_modules/vite/bin/vite.js build",
+  "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
   "serve": "node node_modules/vite/bin/vite.js preview --host 0.0.0.0 --port ${PORT:-4173}",
   "start": "npm run serve",
   "proxy": "node proxy-server.js",
