✅ FIX: update scripts railway et package.json

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite --host",
     "build": "npm run build:static",
     "prebuild:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production",
-    "build:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production && node node_modules/vite/bin/vite.js build",
+    "build:static": "npm run prebuild:static && vite build",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
-    "serve": "node node_modules/vite/bin/vite.js preview --host 0.0.0.0 --port ${PORT:-4173}",
+    "serve": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "npm run serve",
     "proxy": "node proxy-server.js",
     "lint": "eslint .",
@@ -61,13 +61,5 @@
   },
   "overrides": {
     "react-router-dom": "^6.28.1"
-  },
-  "environments": {
-    "production": {
-      "variables": {
-        "NODE_ENV": "production",
-        "VITE_BACKEND_URL": "https://la-brigade-de-la-douane-back-production.up.railway.app"
-      }
-    }
   }
 }
