--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "npm run build:static",
     "prebuild:static": "echo \"VITE_BACKEND_URL=$VITE_BACKEND_URL\" > .env.production",
-    "build:static": "npm run prebuild:static && npx vite build",
+    "build:static": "npm run prebuild:static && ./node_modules/.bin/vite build",
     "preview": "npx vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "serve": "npm run preview",
     "start": "npm run serve",
