--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --host",
     "prebuild:static": "echo VITE_BACKEND_URL=$VITE_BACKEND_URL > .env.production",
-   "build:static": "npm run prebuild:static && npx vite build",
+"build:static": "npm run prebuild:static && chmod +x node_modules/.bin/vite && npx vite build"
     "preview": "vite preview --host",
     "start": "npm run preview"
   },
