--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "prebuild:static": "echo VITE_BACKEND_URL=%VITE_BACKEND_URL% > .env.production",
+    "prebuild:static": "echo OK",
     "build:static": "npm run prebuild:static && npx vite build",
     "preview": "vite preview --host",
     "start": "npm run preview"
