✅ FIX: ajout script 'serve' pour Railway

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "brigade-douane",
   "version": "1.0.1",
   "type": "module",
-  "scripts": {
-    "dev": "node --no-warnings ./node_modules/vite/bin/vite.js --host",
-    "prebuild:static": "echo OK",
-    "build:static": "npm run prebuild:static && node --no-warnings ./node_modules/vite/bin/vite.js build",
-    "preview": "node --no-warnings ./node_modules/vite/bin/vite.js preview --host",
-    "start": "npm run preview"
+"scripts": {
+  "dev": "node --no-warnings ./node_modules/vite/bin/vite.js --host",
+  "prebuild:static": "echo OK",
+  "build:static": "npm run prebuild:static && node --no-warnings ./node_modules/vite/bin/vite.js build",
+  "preview": "node --no-warnings ./node_modules/vite/bin/vite.js preview --host",
+  "start": "npm run preview",
+  "serve": "npm run preview"
   },
   "dependencies": {
     "axios": "^1.6.7",
